messed with header, added reset.css file, linked github

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deutmeyer Project Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -12,17 +13,17 @@
         <h1>Beth Deutmeyer</h1>
         <nav>
             <ul>
-                <li><a href="">GitHub</a></li>
+                <li><a href="https://github.com/bdeutmeyer?tab=repositories">GitHub</a></li>
                 <li><a href="">Marketing site</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+        <h2>Content will go here!</h2>
     </main>
     <footer>
-
+        <h4>Footer will go here!</h4>
     </footer>
 </body>
 </html>
