fixed navbar layout, added subtitle

--- a/index.html
+++ b/index.html
@@ -11,19 +11,24 @@
 <body>
     <header>
         <h1>Beth Deutmeyer</h1>
+        <br>
+        <img src="" alt="">
+        <br>
         <nav>
             <ul>
-                <li><a href="https://github.com/bdeutmeyer?tab=repositories">GitHub</a></li>
-                <li><a href="">Marketing site</a></li>
+                <li><a href="https://github.com/bdeutmeyer">About</a></li>
+                <li><a href="">Work</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h2>Content will go here!</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos excepturi consequuntur magnam, aspernatur, autem dolore itaque minima ullam cumque enim explicabo dolor porro modi. Doloremque aut nesciunt delectus ipsam tempore.</p>
     </main>
     <footer>
         <h4>Footer will go here!</h4>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus alias obcaecati exercitationem quam distinctio, assumenda similique quis odit iste incidunt dignissimos corporis deleniti porro dolores reiciendis quae adipisci nesciunt consequatur.</p>
     </footer>
 </body>
 </html>
