added about content, footer content, marketing image

--- a/index.html
+++ b/index.html
@@ -23,12 +23,27 @@
         </nav>
     </header>
     <main>
-        <h2>Content will go here!</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos excepturi consequuntur magnam, aspernatur, autem dolore itaque minima ullam cumque enim explicabo dolor porro modi. Doloremque aut nesciunt delectus ipsam tempore.</p>
+        <section id="about"> 
+            <p>Welcome to my web development portfolio! I am currently a Northwestern University Coding Boot Camp student, and just finished week one of the program. I am pretty new to coding, having only done a few free beginner courses online through Codecademy before this course, so I'm learning a lot! My education background is in music, and I have about 15 years of experience as a voice teacher.</p>
+        </section>
+        <section id="work">
+            <figure id="marketing">
+                <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing site screenshot">
+                <figcaption>Marketing site refactor challenge</figcaption>
+            </figure>
+            <figure>
+                <figcaption>Coming soon
+                </figcaption>
+            </figure>
+        </section>
+        <aside>
+            <h2>About</h2>
+            <h2>Work</h2>
+            <h2>Contact</h2>
+        </aside>
     </main>
     <footer>
-        <h4>Footer will go here!</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus alias obcaecati exercitationem quam distinctio, assumenda similique quis odit iste incidunt dignissimos corporis deleniti porro dolores reiciendis quae adipisci nesciunt consequatur.</p>
+        <p>Crochet by Beth Deutmeyer ---<+>--- Pattern: "Frost" by <a href="https://www.ravelry.com/patterns/sources/tinna-thorudottir-thorvaldsdottirs-ravelry-store/patterns">Tinna Þórdóttir Þorvaldar</a></p>
     </footer>
 </body>
 </html>
