--- a/index.html
+++ b/index.html
@@ -23,25 +23,47 @@
         </nav>
     </header>
     <main>
-        <section id="about"> 
+        <section class="headings">
+            <h2 id="about-side">About</h2>
+        </section>
+        <section class="content" id="about"> 
+            <h2 class="smallscreen">About</h2>
             <p>Welcome to my web development portfolio! I am currently a Northwestern University Coding Boot Camp student, and just finished week one of the program. I am pretty new to coding, having only done a few free beginner courses online through Codecademy before this course, so I'm learning a lot! My education background is in music, and I have about 15 years of experience as a voice teacher.</p>
         </section>
-        <section id="work">
+        <section class="headings">
+            <h2 id="work-side">Work</h2>
+        </section>
+        <section class="content" id="work">
+            <h2 class="smallscreen">Work</h2>
             <figure id="marketing">
                 <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing site screenshot">
                 <figcaption>Marketing site refactor challenge</figcaption>
             </figure>
-            <figure>
+            <figure class="card">
+                <figcaption>Coming soon
+                </figcaption>
+            </figure>
+            <figure class="card">
+                <figcaption>Coming soon
+                </figcaption>
+            </figure>
+            <figure class="card">
+                <figcaption>Coming soon
+                </figcaption>
+            </figure>
+            <figure class="card">
                 <figcaption>Coming soon
                 </figcaption>
             </figure>
         </section>
-        <aside>
-            <h2>About</h2>
-            <h2>Work</h2>
-            <h2>Contact</h2>
-        </aside>
-    </main>
+        <section class="headings">
+            <h2 id="contact-side">Contact</h2>
+        </section>
+        <section class="content" id="contact">
+            <h2 class="smallscreen">Contact</h2>
+        </section>
+        
+    </main>    
     <footer>
         <p>Crochet by Beth Deutmeyer ---<+>--- Pattern: "Frost" by <a href="https://www.ravelry.com/patterns/sources/tinna-thorudottir-thorvaldsdottirs-ravelry-store/patterns">Tinna Þórdóttir Þorvaldar</a></p>
     </footer>
