began fixing layout

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         </nav>
     </header>
     <main>
-        <section class="headings">
+        <!-- <section class="headings">
             <h2 id="about-side">About</h2>
-        </section>
+        </section> -->
         <section class="content" id="about"> 
             <h2 class="smallscreen">About</h2>
             <p>Welcome to my web development portfolio! I am currently a Northwestern University Coding Boot Camp student, and just finished week one of the program. I am pretty new to coding, having only done a few free beginner courses online through Codecademy before this course, so I'm learning a lot! My education background is in music, and I have about 15 years of experience as a voice teacher.</p>
         </section>
-        <section class="headings">
+        <!-- <section class="headings">
             <h2 id="work-side">Work</h2>
-        </section>
+        </section> -->
         <section class="content" id="work">
             <h2 class="smallscreen">Work</h2>
             <figure id="marketing">
@@ -56,9 +56,9 @@
                 </figcaption>
             </figure>
         </section>
-        <section class="headings">
+        <!-- <section class="headings">
             <h2 id="contact-side">Contact</h2>
-        </section>
+        </section> -->
         <section class="content" id="contact">
             <h2 class="smallscreen">Contact</h2>
         </section>
