made all headings ::before, added placeholder images, continued messing with layout

--- a/index.html
+++ b/index.html
@@ -27,31 +27,33 @@
             <h2 id="about-side">About</h2>
         </section> -->
         <section class="content" id="about"> 
-            <h2 class="smallscreen">About</h2>
             <p>Welcome to my web development portfolio! I am currently a Northwestern University Coding Boot Camp student, and just finished week one of the program. I am pretty new to coding, having only done a few free beginner courses online through Codecademy before this course, so I'm learning a lot! My education background is in music, and I have about 15 years of experience as a voice teacher.</p>
         </section>
         <!-- <section class="headings">
             <h2 id="work-side">Work</h2>
         </section> -->
         <section class="content" id="work">
-            <h2 class="smallscreen">Work</h2>
             <figure id="marketing">
                 <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing site screenshot">
                 <figcaption>Marketing site refactor challenge</figcaption>
             </figure>
             <figure class="card">
+                <img src="./assets/images/anchorage-mountains.jpg" alt="Mountains over Anchorage">
                 <figcaption>Coming soon
                 </figcaption>
             </figure>
             <figure class="card">
+                <img src="./assets/images/peony.jpg" alt="Peony">
                 <figcaption>Coming soon
                 </figcaption>
             </figure>
             <figure class="card">
+                <img src="./assets/images/Cassie-the-dog.JPG" alt="Cassie the dog">
                 <figcaption>Coming soon
                 </figcaption>
             </figure>
             <figure class="card">
+                <img src="./assets/images/butterfly.jpg" alt="House with Christmas lights">
                 <figcaption>Coming soon
                 </figcaption>
             </figure>
@@ -60,7 +62,6 @@
             <h2 id="contact-side">Contact</h2>
         </section> -->
         <section class="content" id="contact">
-            <h2 class="smallscreen">Contact</h2>
         </section>
         
     </main>    
