--- a/index.html
+++ b/index.html
@@ -33,7 +33,25 @@
             <h2 id="work-side">Work</h2>
         </section> -->
         <section class="content" id="work">
-            <figure id="marketing">
+            <article id="marketing">
+                <p>Text on image</p>
+            </article>
+            <section id="placeholders">
+                <article id="mountains">
+                    <p>Text on image</p>
+                </article>
+                <article id="peony">
+                    <p>Text on image</p>
+                </article>
+                <article id="cassie">
+                    <p>Text on image</p>
+                </article>
+                <article id="butterfly">
+                    <p>Text on image</p>
+                </article>
+            </section>
+        </section>    
+            <!-- <figure id="marketing">
                 <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing site screenshot">
                 <figcaption>Marketing site refactor challenge</figcaption>
             </figure>
@@ -56,8 +74,7 @@
                 <img src="./assets/images/butterfly.jpg" alt="House with Christmas lights">
                 <figcaption>Coming soon
                 </figcaption>
-            </figure>
-        </section>
+            </figure> -->
         <!-- <section class="headings">
             <h2 id="contact-side">Contact</h2>
         </section> -->
