fixed image responsiveness and layout, added labels and borders

--- a/index.html
+++ b/index.html
@@ -23,65 +23,37 @@
         </nav>
     </header>
     <main>
-        <!-- <section class="headings">
-            <h2 id="about-side">About</h2>
-        </section> -->
         <section class="content" id="about"> 
             <p>Welcome to my web development portfolio! I am currently a Northwestern University Coding Boot Camp student, and just finished week one of the program. I am pretty new to coding, having only done a few free beginner courses online through Codecademy before this course, so I'm learning a lot! My education background is in music, and I have about 15 years of experience as a voice teacher.</p>
         </section>
-        <!-- <section class="headings">
-            <h2 id="work-side">Work</h2>
-        </section> -->
         <section class="content" id="work">
-            <article id="marketing">
-                <p>Text on image</p>
-            </article>
-            <section id="placeholders">
-                <article id="mountains">
-                    <p>Text on image</p>
-                </article>
-                <article id="peony">
-                    <p>Text on image</p>
-                </article>
-                <article id="cassie">
-                    <p>Text on image</p>
-                </article>
-                <article id="butterfly">
-                    <p>Text on image</p>
-                </article>
-            </section>
-        </section>    
-            <!-- <figure id="marketing">
+            <figure id="marketing">
                 <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing site screenshot">
-                <figcaption>Marketing site refactor challenge</figcaption>
             </figure>
-            <figure class="card">
-                <img src="./assets/images/anchorage-mountains.jpg" alt="Mountains over Anchorage">
-                <figcaption>Coming soon
-                </figcaption>
-            </figure>
-            <figure class="card">
-                <img src="./assets/images/peony.jpg" alt="Peony">
-                <figcaption>Coming soon
-                </figcaption>
-            </figure>
-            <figure class="card">
-                <img src="./assets/images/Cassie-the-dog.JPG" alt="Cassie the dog">
-                <figcaption>Coming soon
-                </figcaption>
-            </figure>
-            <figure class="card">
-                <img src="./assets/images/butterfly.jpg" alt="House with Christmas lights">
-                <figcaption>Coming soon
-                </figcaption>
-            </figure> -->
-        <!-- <section class="headings">
-            <h2 id="contact-side">Contact</h2>
-        </section> -->
+            <section id="placeholders">    
+                <figure class="card" id="mountains">
+                    <img src="./assets/images/anchorage-mountains.jpg" alt="Mountains over Anchorage">
+                </figure>
+                <figure class="card" id="peony">
+                    <img src="./assets/images/peony.jpg" alt="Peony">
+                </figure>
+                <figure class="card" id="cassie">
+                    <img src="./assets/images/Cassie-the-dog.JPG" alt="Cassie the dog">
+                </figure>
+                <figure class="card" id="butterfly">
+                    <img src="./assets/images/butterfly.jpg" alt="Butterfly">
+                </figure> 
+            </section> 
+        </section>       
         <section class="content" id="contact">
-        </section>
-        
-    </main>    
+            <ul>
+                <li>GitHub</li>
+                <li>LinkedIn</li>
+                <li>email@email.com</li>
+                <li>555-555-5555</li>
+            </ul>
+        </section>   
+    </main> 
     <footer>
         <p>Crochet by Beth Deutmeyer ---<+>--- Pattern: "Frost" by <a href="https://www.ravelry.com/patterns/sources/tinna-thorudottir-thorvaldsdottirs-ravelry-store/patterns">Tinna Þórdóttir Þorvaldar</a></p>
     </footer>
