fixed contact layout

--- a/index.html
+++ b/index.html
@@ -46,12 +46,17 @@
             </section> 
         </section>       
         <section class="content" id="contact">
-            <ul>
-                <li>GitHub</li>
-                <li>LinkedIn</li>
-                <li>email@email.com</li>
-                <li>555-555-5555</li>
-            </ul>
+            <article id="details">
+                <ul>
+                    <li>GitHub</li>
+                    <li>LinkedIn</li>
+                    <li>email@email.com</li>
+                    <li>555-555-5555</li>
+                </ul>
+                <figure id="headshot">
+                    <img src="./assets/images/Beth.jpg" alt="Beth Deutmeyer">
+                </figure>
+            </article>    
         </section>   
     </main> 
     <footer>
