used different method for headings, added most links

--- a/index.html
+++ b/index.html
@@ -12,51 +12,50 @@
     <header>
         <h1>Beth Deutmeyer</h1>
         <br>
-        <img src="" alt="">
         <br>
         <nav>
             <ul>
-                <li><a href="https://github.com/bdeutmeyer">About</a></li>
-                <li><a href="">Work</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href=#about>About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="content" id="about"> 
+            <h2>About</h2>
             <p>Welcome to my web development portfolio! I am currently a Northwestern University Coding Boot Camp student, and just finished week one of the program. I am pretty new to coding, having only done a few free beginner courses online through Codecademy before this course, so I'm learning a lot! My education background is in music, and I have about 15 years of experience as a voice teacher.</p>
         </section>
         <section class="content" id="work">
-            <figure id="marketing">
-                <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing site screenshot">
-            </figure>
-            <section id="placeholders">    
-                <figure class="card" id="mountains">
-                    <img src="./assets/images/anchorage-mountains.jpg" alt="Mountains over Anchorage">
+            <h2>Work</h2>
+            <section id="work-images">
+                <figure id="marketing">
+                    <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing site screenshot">
                 </figure>
-                <figure class="card" id="peony">
-                    <img src="./assets/images/peony.jpg" alt="Peony">
-                </figure>
-                <figure class="card" id="cassie">
-                    <img src="./assets/images/Cassie-the-dog.JPG" alt="Cassie the dog">
-                </figure>
-                <figure class="card" id="butterfly">
-                    <img src="./assets/images/butterfly.jpg" alt="Butterfly">
-                </figure> 
+                <section id="placeholders">    
+                    <figure class="card" id="mountains">
+                        <img src="./assets/images/anchorage-mountains.jpg" alt="Mountains over Anchorage">
+                    </figure>
+                    <figure class="card" id="peony">
+                        <img src="./assets/images/peony.jpg" alt="Peony">
+                    </figure>
+                    <figure class="card" id="cassie">
+                        <img src="./assets/images/Cassie-the-dog.JPG" alt="Cassie the dog">
+                    </figure>
+                    <figure class="card" id="butterfly">
+                        <img src="./assets/images/butterfly.jpg" alt="Butterfly">
+                    </figure> 
+                </section>    
             </section> 
         </section>       
         <section class="content" id="contact">
-            <article id="details">
-                <ul>
-                    <li>GitHub</li>
-                    <li>LinkedIn</li>
-                    <li>email@email.com</li>
-                    <li>555-555-5555</li>
-                </ul>
-                <figure id="headshot">
-                    <img src="./assets/images/Beth.jpg" alt="Beth Deutmeyer">
-                </figure>
-            </article>    
+            <h2>Contact</h2>
+            <ul id="details">
+                <li><a href="https://github.com/bdeutmeyer">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/beth-deutmeyer-4b0b73238">LinkedIn</a></li>
+                <li>email@email.com</li>
+                <li>555.555.5555</li>
+            </ul>   
         </section>   
     </main> 
     <footer>
