fixed responsiveness, added media queries

--- a/index.html
+++ b/index.html
@@ -24,14 +24,19 @@
     <main>
         <section class="content" id="about"> 
             <h2>About</h2>
-            <p>Welcome to my web development portfolio! I am currently a Northwestern University Coding Boot Camp student, and just finished week one of the program. I am pretty new to coding, having only done a few free beginner courses online through Codecademy before this course, so I'm learning a lot! My education background is in music, and I have about 15 years of experience as a voice teacher.</p>
+            <figure id="headshot">
+                <img src="./assets/images/Beth.jpg" alt="Beth Deutmeyer">
+            </figure>
+            <p>Welcome to my web development portfolio! I am currently a Northwestern University Coding Boot Camp student, and just finished week one of the program. I am essentially new to coding, having only done a few free beginner courses online through Codecademy before this course, so I'm learning a lot! My education background is in music, and I have about 15 years of experience as a voice teacher.</p>
         </section>
         <section class="content" id="work">
             <h2>Work</h2>
             <section id="work-images">
-                <figure id="marketing">
-                    <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing site screenshot">
-                </figure>
+                <a href="">
+                    <figure id="marketing">
+                        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing site screenshot">
+                    </figure>
+                </a>
                 <section id="placeholders">    
                     <figure class="card" id="mountains">
                         <img src="./assets/images/anchorage-mountains.jpg" alt="Mountains over Anchorage">
@@ -53,13 +58,13 @@
             <ul id="details">
                 <li><a href="https://github.com/bdeutmeyer">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/beth-deutmeyer-4b0b73238">LinkedIn</a></li>
-                <li>email@email.com</li>
-                <li>555.555.5555</li>
+                <li><a href="">email@email.com</a></li>
+                <li><a href="">555.555.5555</a></li>
             </ul>   
         </section>   
     </main> 
     <footer>
-        <p>Crochet by Beth Deutmeyer ---<+>--- Pattern: "Frost" by <a href="https://www.ravelry.com/patterns/sources/tinna-thorudottir-thorvaldsdottirs-ravelry-store/patterns">Tinna Þórdóttir Þorvaldar</a></p>
+        <p>Crochet by Beth Deutmeyer ---<+>--- <a href="https://www.ravelry.com/patterns/sources/tinna-thorudottir-thorvaldsdottirs-ravelry-store/patterns">Pattern: "Frost" by Tinna Þórdóttir Þorvaldar</a></p>
     </footer>
 </body>
 </html>
