--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="content" id="work">
             <h2>Work</h2>
             <section id="work-images">
-                <a href="">
+                <a href="https://bdeutmeyer.github.io/marketing-refactor-challenge/" target="_blank">
                     <figure id="marketing">
                         <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing site screenshot">
                     </figure>
@@ -56,8 +56,8 @@
         <section class="content" id="contact">
             <h2>Contact</h2>
             <ul id="details">
-                <li><a href="https://github.com/bdeutmeyer">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/beth-deutmeyer-4b0b73238">LinkedIn</a></li>
+                <li><a href="https://github.com/bdeutmeyer" target="_blank">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/beth-deutmeyer-4b0b73238" target="_blank">LinkedIn</a></li>
                 <li><a href="">email@email.com</a></li>
                 <li><a href="">555.555.5555</a></li>
             </ul>   
